fix: fix error catch with wrong id, width of the description on small screen

--- a/eCommerce/src/pages/product/pageProduct.sass
+++ b/eCommerce/src/pages/product/pageProduct.sass
@@ -142,7 +142,7 @@
     justify-content: center
     margin-top: 5%
     margin-left: 5%
-    width: 100%
+    width: 90%
 
   .swiper
     max-width: 350px
